# gensketch

./: .editorconfig  .eslintrc.json  .gitignore  .prettierrc.json  Cargo.toml  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/: App.css  App.tsx  MainWindow.tsx  bindings.ts  hooks.tsx  index.css  main.tsx
frontend/components/: Alert.tsx  AlertArea.tsx  AlignmentsView.tsx  ErrorBoundary.tsx  GridCell.tsx  GridDivider.tsx  MainWindow.tsx  RefSeqArea.tsx  RefSeqView.tsx  SplitGrid.tsx  SplitToolbar.tsx  Toolbar.tsx  Track.tsx
frontend/contexts/: AlertContext.tsx  RefSeqContext.tsx  SplitGridContext.tsx  UserConfigContext.tsx
frontend/lib/: GenomicRegion.tsx  PixiApplication.tsx  constants.ts  constants.tsx  drawing.ts  drawing.tsx  errors.ts  errors.tsx  events.tsx  genomicCoordinates.ts  hooks.tsx  pixi-utils.tsx  theme.tsx  types.ts  util.ts  util.tsx
frontend/lib/backends/: tauri.tsx
scripts/: export-typescript-definitions  gen-bitmap-font.sh  gen-example-bam.sh  gen-test-data.sh  gen-tiny-bam.sh
src/: App.svelte  main.js  main.js.map  main.ts  styles.css
src-tauri/: Cargo.toml  bam_read.pb  build.rs  tauri.conf.json
src-tauri/benches/: bench.rs  perf.rs
src-tauri/src/: alignment.rs  errors.rs  lib.rs  macros.rs  main.rs  paths.rs  util.rs
src-tauri/src/alignments/: alignment.rs  alignment_reader.rs  mod.rs  stack.rs  stack_reader.rs
src-tauri/src/bio_util/: alignment.rs  genomic_coordinates.rs  mod.rs  refseq.rs  sequence.rs
src-tauri/src/file_formats/: enums.rs  mod.rs
src-tauri/src/file_formats/fasta/: reader.rs
src-tauri/src/file_formats/sam_bam/: aligned_read.rs  diff.rs  mod.rs  reader.rs  stack.rs  tid.rs
src-tauri/src/interface/: alignments_manager.rs  backend.rs  commands.rs  events.rs  mod.rs  split.rs  split_grid.rs  system_menu.rs  track.rs  typescript.rs  user_config.rs
src-tauri/src/test_util/: mocks.rs  mod.rs
src-tauri/test_data/: human-mtdna.fa  human-mtdna.fa.fai
src/assets/: DejaVuSansMono.fnt
src/lib/: backend.ts  bindings.ts  constants.ts  drawing.ts  errorHandling.ts  errors.ts  genomicCoordinates.test.ts  genomicCoordinates.ts  logger.ts  types.ts  util.test.ts  util.ts
src/lib/backends/: tauri.test.ts  tauri.ts
src/lib/components/: Alert.svelte  AlertArea.svelte  AlignmentsView.svelte  Button.svelte  DisplayError.svelte  Flex.svelte  FocusedRegionInput.svelte  GridDivider.svelte  RefSeqArea.svelte  RefSeqView.svelte  Spinner.svelte  SplitGrid.svelte  SplitGrid.types.ts  SplitToolbar.svelte  SplitToolbarItem.svelte  Toolbar.svelte  Track.svelte  TrackArea.svelte
src/lib/drawing/: AlignedReadsScene.test.ts  AlignedReadsScene.ts  RefSeqScene.ts  Scene.ts  drawing.ts
src/lib/stores/: AlertStore.ts  UserConfigStore.ts
src/lib/testUtil/: fileMock.ts  fixtures.ts  pixi.ts
src/routes/: +layout.js  +layout.js.map  +layout.ts
test-util-rs/: Cargo.toml
test-util-rs/src/: data.rs  htslib_records.rs  lib.rs
test_data/: fake-genome.empty.bam  fake-genome.fa  fake-genome.fa.fai  fake-genome.reads.bam  fake-genome.reads.bam.bai  fake-genome.tiny.bam  fake-genome.tiny.bam.bai  fake-genome.tiny.unmapped.bam  fake-genome.unmapped.bam  fake-genome.unmapped.bam.bai
