[workspace]
members = [
    "src-tauri",
    "test-util-rs"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.69"
authors = ["fennerm"]
description = "Genomics data viewer and sketchpad"
license = "AGPL-3.0"
repository = "https://github.com/fennerm/gensketch"
readme = "./README.md"
publish = false

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bio = "1.0"
bio-types = {version = "0.13", features = ["serde"] }
dashmap={ version = "5.4.0", features = ["rayon"] }
itertools = "0.10"
log = "0.4"
parking_lot = {version = "0.12", features = ["serde"] }
pretty_assertions = "1.3"
rayon = "1.6.1"
rust-htslib = "0.40"
serde_json = "1.0"
serde_with = "2.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.2.4", features = ["api-all"] }
tauri-build = { version = "1.2.1", features = [] }
# Pinning to an older rev because newer versions cause workspace inheritance errors
tauri-plugin-log = { git = "https://github.com/tauri-apps/tauri-plugin-log", rev = "85d45c1c42" }
thiserror = "1.0"
# 1/14/23 ts-rs currently only works with uuid 0.8
uuid = {version="0.8", features = ["serde", "v4"] }
