[package]
name = "gensketch"
version = "0.1.0"
description = "Genomics data viewer and sketchpad"
authors = ["fennerm"]
keywords = ["genomics", "viewer", "sketchpad", "ngs", "sequencing", "alignment", "bam", "sam"]
license = "AGPL-3.0"
repository = "https://github.com/fennerm/gensketch"
readme = "README.md"
publish = false
default-run = "gensketch"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bio = "1.0"
bio-types = {version = "0.13", features = ["serde"] }
log = "0.4"
parking_lot = {version = "0.12", features = ["serde"] }
rust-htslib = "0.40"
serde_json = "1.0"
serde_with = "2.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.0.5", features = ["api-all"] }
# Pinning to an older rev because newer versions cause workspace inheritance errors
tauri-plugin-log = { git = "https://github.com/tauri-apps/tauri-plugin-log", rev = "85d45c1c42" }
thiserror = "1.0"
# 1/14/23 ts-rs currently only works with uuid 0.8
uuid = {version="0.8", features = ["serde", "v4"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
