[package]
name = "gensketch"
keywords = ["genomics", "viewer", "sketchpad", "ngs", "sequencing", "alignment", "bam", "sam"]
publish = false
default-run = "gensketch"
version = "0.1.0"
edition = "2021"
rust-version = "1.69"
authors = ["fennerm"]
description = "Genomics data viewer and sketchpad"
license = "AGPL-3.0"
repository = "https://github.com/fennerm/gensketch"
readme = "../README.md"
# Re-enable workspace inheritance when https://github.com/tauri-apps/tauri/issues/6122 is patched
# description.workspace = true
# authors.workspace = true
# license.workspace = true
# repository.workspace = true
# readme.workspace = true
# edition.workspace = true
# rust-version.workspace = true
# version.workspace = true

[build-dependencies]
# tauri-build = { workspace = true }
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
# anyhow = { workspace = true }
# bio = { workspace = true }
# bio-types = { workspace = true }
# dashmap= { workspace = true }
# itertools = {workspace = true}
# log = { workspace = true }
# parking_lot = { workspace = true }
# rayon = { workspace = true }
# rust-htslib = { workspace = true }
# serde_json = { workspace = true }
# serde_with = { workspace = true }
# serde = { workspace = true }
# tauri = { workspace = true }
# tauri-plugin-log = { workspace = true }
# thiserror = { workspace = true }
# uuid = { workspace = true }
anyhow = { version = "1.0", features = ["backtrace"] }
bio = "1.0"
bio-types = {version = "0.13", features = ["serde"] }
dashmap= { version = "5.4.0", features = ["rayon"] }
itertools = "0.10"
log = "0.4"
parking_lot = {version = "0.12", features = ["serde"] }
rayon = "1.6.1"
rust-htslib = "0.40"
serde_json = "1.0"
serde_with = "2.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.2.4", features = ["api-all"] }
# Pinning to an older rev because newer versions cause workspace inheritance errors
tauri-plugin-log = { git = "https://github.com/tauri-apps/tauri-plugin-log", rev = "85d45c1c42" }
thiserror = "1.0"
# 1/14/23 ts-rs currently only works with uuid 0.8
uuid = {version="0.8", features = ["serde", "v4"] }

[dev-dependencies]
# pretty_assertions = { workspace = true}
pretty_assertions = "1.3"
test-util-rs = {path = "../test-util-rs"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
custom-protocol = [ "tauri/custom-protocol" ]
