[package]
name = "gensketch"
keywords = ["genomics", "viewer", "sketchpad", "ngs", "sequencing", "alignment", "bam", "sam"]
publish = false
# default-run = "gensketch"
version = "0.1.0"
edition = "2021"
rust-version = "1.69"
authors = ["fennerm"]
description = "Genomics data viewer and sketchpad"
license = "AGPL-3.0"
repository = "https://github.com/fennerm/gensketch"
readme = "../README.md"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bio = "1.0"
bio-types = {version = "0.13", features = ["serde"] }
dashmap= { version = "5.4.0", features = ["rayon", "serde"] }
itertools = "0.10"
log = "0.4"
parking_lot = {version = "0.12", features = ["serde"] }
rayon = "1.6.1"
rust-htslib = "0.40"
serde_json = "1.0"
serde_with = "2.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.2.4", features = ["api-all"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", features= ["colored"] }
thiserror = "1.0"
# 1/14/23 ts-rs currently only works with uuid 0.8
uuid = {version="0.8", features = ["serde", "v4"] }

[dev-dependencies]
criterion = "0.3"
inferno = "0.11.5"
mockall = "0.11.2"
pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
pretty_assertions = "1.3"

[features]
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "gensketch_lib"
path = "src/lib.rs"

[[bin]]
name = "gensketch"
path = "src/bin/main.rs"

[[bench]]
name = "bench"
harness = false
